welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: ';' expected but ')' found.
	if ((a>0 && b<0) || (a<0 && b>0)) || (negative && a<0 && b<0))
                                                                     ^